Update on Overleaf.

--- a/ExSummary.tex
+++ b/ExSummary.tex
@@ -44,9 +44,9 @@ The majority of PM exceedances occurred during the winter and autumn 2018 at Cen
 
 
 
-%Something about ozone, Sverre - Added text for 2019 above. 
 
-%Something about wet dep, Hilde
+
+\QUERY{Something about wet dep, Hilde}
 
 
 %\subsubsection*{The summer of 2018} OLD
@@ -82,23 +82,27 @@ In 2021, CEIP in co-operation with TNO prepared a list of Parties where it could
 %official EMEP emissions combined with TNO REF2.1 emissions for the GNFR sector C for PM (EMEPwREF2.1C). 
 
 %The 1999 Gothenburg Protocol lists emission reduction commitments of NO$_x$, SO$_x$, NH$_3$ and NMVOCs for most of the Parties to the LRTAP Convention for the year 2010\COMMENT{WHY DO THEY TALK ABOUT THE 2010 targets and not the 2020 targets?Should we include this at all in the Summary?}. These commitments should not be exceeded in 2010 nor in subsequent years. When considering only reported data, approved adjustments and fuel use data of the respective countries, it can be seen that in the year 2019 North Macedonia could not reduce their \sox emissions below their respective Gothenburg Protocol requirements, and that Croatia and Spain are above their 1999 Gothenburg Protocol ceilings concerning \nhiii. For \nox and NMVOC all countries were below their individual ceilings in year 2019.
-
-
-
 %Emissions from international shipping in different European seas were estimated based on the CAMS global shipping emission dataset for the year 2019.
 
 \subsubsection*{Trends in air pollution 2000-2019}
 In December 2019, the Executive Body launched the review of the Gothenburg Protocol as amended in 2012. In order to support the review and assess the progress made towards achieving the environmental and health objectives of the Protocol, we present an assessment of the trends in air pollution in Europe for the period 2000-2019 based on long term observational data from the EMEP network as well as EMEP MSC-W model calculations.
-We analyze trends in air quality for ozone, sulphur dioxide, particulate matter (and their species; sulphate, nitrate, ammonium, elemental carbon and organic carbon), oxidized and reduced nitrogen as well as wet deposition of sulphur and nitrogen species. In addition, we present trends in some indicators of health and vegetation risk (SOMO35, exceedances of WHO guideline values for PM$_{2.5}$, AOT40 for forests and crops, and exceedances of critical loads for acidification and eutrophication for every 5 year since 2000)
+We analyze trends in air concentrations for ozone, sulphur dioxide, particulate matter (and their species; sulphate, nitrate, ammonium, elemental carbon and organic carbon), oxidized and reduced nitrogen as well as wet deposition of sulphur and nitrogen species. In addition, we present trends in some indicators of health and vegetation risk (SOMO35, exceedances of WHO guideline values for PM$_{2.5}$, AOT40 for forests and crops, and exceedances of critical loads for acidification and eutrophication for every 5 year since 2000).
 
-%SOX Wenche
+%SOX: Wenche
+The SO$_x$ emissions in the EU27+UK+EFTA countries have declined by more than 80\% (-4.3\% yr$^{-1}$) the last two decades. This is reflected in both the observed and modelled trends for all the atmospheric sulfur components. The average total reductions in observations for the last 20 years (2000-2019) are 74\%, 61\% and 60\% for \soii, \soiv in aerosols and in wet deposition respectively, while the trends in model calculations are somewhat higher: 97\%, 72\% and 81\%, respectively
 
 %NOx Hilde
-
+We find that oxidized nitrogen in precipitation and in air (NO$_2$, HNO$_3$, NO$_3^{-}$ aerosol and the sum of HNO$_3$ and NO$_3^{-}$ aerosol) has been decreasing since 2000. However, the decrease in the observations (-24\%, 1.2\% yr$^{-1}$) for NO$_2$ and for wet deposition of oxidized nitrogen (-26\%, -1.4\% yr$^{-1}$) are smaller than in model calculations (-42\%, -2.2\% yr$^{-1}$ for NO$_2$) and -40\% (-2.3\% yr$^{-1}$) for wet deposition of oxidized nitrogen  and emissions (-48\% for EU27+UK+EFTA countries) for 2000--2019.
 
 %redN Hilde 
+For reduced nitrogen, the observations and the model calculations confirm that very small reductions of ammonia emissions have been achieved during the 2000--2019 period. 
+Both observations and model calculations find very few significant trends in wet deposition of reduced nitrogen.
+Total ammonium (NH$_3$ + NH$_4$) in air show larger negative changes of about -1.45\% yr$^{-1}$ (observations) and -1.33\% yr$^{-1}$ (model calculations) and with a larger fraction of the sites having significant trends. This trend is larger than the reduction in ammonia emissions for EU27+UK+EFTA countries (-12\%), in total 27\% (25\%) in observations (model calculations) for 2000-2019. The trend for ammonium aerosols is even more negative, -2.6 \% yr$^{-1}$ both in observations and model calculations. Very few sites have long term time series of ammonia in air (8 sites), and for very few of those sites the changes are statistically significant. However, on average, the changes observed and calculated are positive. 
 
-%PM Svetlana
+These large differences between the changes found for the different reduced nitrogen components can be explained by the interaction of ammonia with the sulphur and nitrogen components. It can be noted that the results imply that the contribution of ammonia emission to aerosols have been largely reduced during the 2000--2019 period, due to the impact of SO$_x$ and NO$_x$ emission reductions. 
+
+\QUERY{PM: Svetlana}
+
 
 %OC and EC and 'do the organic fraction increase?': David & Karl Espen
 For EC and OC we have calculated observed and modelled trends for 15 sites across Europe for the period 2010--2019. A reduction (of ca. 4.5~\%/yr) in observed EC was found, and a similar reduction was found for OC in the winter months (when OC is expected to be most sensitive to primary anthropogenic emissions rather than to OA associated with biogenic sources). These trends suggest that abatement measures are having some success in reducing both EC and OC in Europe, especially in wintertime.  The model reproduced modelled EC values and trends quite well, but underpredicted OC, both in terms of absolute values and trends. This underprediction is at least partly due to the omission of condensable organics in the reported emissions from many countries. 
@@ -119,7 +123,6 @@ Comparison of trends in measured and modelled VOCs is not included in this repor
 %Exceedances of critical loads Hilde
 
 %Note on validity Hilde
-
 Unfortunately, the EMEP observational network is dominated by sites in the western part of the EMEP domain and has hardly any coverage in the EECCA and western Balkan area. Therefore, the assessment discussed in above is only valid for a part of the EMEP domain. Furthermore, the development of emissions in the western and eastern part of the EMEP domain follow different patterns, with clear decreases of all pollutants in the western countries  but more stable (albeit gradually decreasing for most pollutants) in the eastern part of the domain over the 2000-2019 period. Thus, the trends in the eastern part of the EMEP domain are expected to be different than those presented here for the western part of the domain. Note however, that the uncertainties related to emissions and their trends in the eastern countries are large.
 
 
