--- a/Refs2021.bib
+++ b/Refs2021.bib
@@ -2105,3 +2105,29 @@
   doi =           {10.1007/978-94-017-9508-1},
 }
 
+@Article{SimpsonCOSUST2014,
+  title = {Ozone - the persistent menace; interactions with the N cycle and climate change},
+  author = {Simpson, D. and Arneth, A. and Mills, G. and Solberg, S. and Uddling, J.},
+  journal = {Current Op. Environ. Sust.},
+  year = {2014},
+  volume = {9-10},
+  pages = {9-19},
+  number = {0},
+  note = {SI: System dynamics and sustainability },
+  doi = {http://dx.doi.org/10.1016/j.cosust.2014.07.008},
+  issn = {1877-3435},
+}
+
+
+@article{Hussain2019,
+  doi = {10.21105/joss.01556},
+  url = {https://doi.org/10.21105/joss.01556},
+  year = {2019},
+  publisher = {The Open Journal},
+  volume = {4},
+  number = {39},
+  pages = {1556},
+  author = {Md. Manjurul Hussain and Ishtiak Mahmud},
+  title = {pyMannKendall: a python package for non parametric Mann Kendall family of trend tests.},
+  journal = {Journal of Open Source Software}
+}
