--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -206,7 +206,7 @@ north to south. The concentrations are below 2-5 \ug in Northern
 Europe, increasing to 5-15 \ug in the mid-latitudes and further south,
 \PM[2.5] levels being somewhat lower than those of
 \PM[10]. Figure~\ref{fig:PMin2019} displays fairly homogeneous modelled levels of regional background PM over most of Central and Western Europe,
-with \PM[10] in excess of 20 \ug in the Po Valley and on Cyprus. The observations also show \PM[10] concentrations above 20 \ug in Slovakia. \PM[2.5] concentrations are below 10 \ug over most of EMEP domain (except the south/southeast most regions), or otherwise between 10 and 15 \ug in  parts of Benelux, Poland, Hungary and some of Balkan countries). The only site with observed annual mean \PM[10] above 15 \ug (namely 16.3 \ug) was Hungarian K-Puszta. Furthermore, the model calculates high PM for the regions east of the Caspian Sea (parts of Kazakhstan, Uzbekistan, Turkmenistan) and over the southern Mediterranean, with annual mean concentrations in excess of 50 \ug. These high PM concentrations are due to windblown dust from the arid soils and deserts of Central Asia, though the precision of the calculated values still cannot be verified due to the lack of observations in these regions.
+with \PM[10] in excess of 20 \ug in the Po Valley and on Cyprus. The observations also show \PM[10] concentrations above 20 \ug in Slovakia. \PM[2.5] concentrations are below 10 \ug over most of EMEP domain (except the most south/southeastern regions), or otherwise between 10 and 15 \ug in  parts of Benelux, Poland, Hungary and some Balkan countries. The only site with observed annual mean \PM[10] above 15 \ug (namely 16.3 \ug) was Hungarian K-Puszta. Furthermore, the model calculates high PM for the regions east of the Caspian Sea (parts of Kazakhstan, Uzbekistan, Turkmenistan) and over the southern Mediterranean, with annual mean concentrations in excess of 50 \ug. These high PM concentrations are due to windblown dust from the arid soils and deserts of Central Asia, though the precision of the calculated values still cannot be verified due to the lack of observations in these regions.
 
 There is a good agreement between the modelled and observed
 distributions of annual mean \PM[10] and \PM[2.5], with correlation
@@ -215,10 +215,10 @@ underestimates the observed annual mean of \PM[10] by 12\% and
 \PM[2.5] by 13\% (see also Table \ref{tab:tableOldFashioned} in \ref{ch:appx_modeleval}). \textcolor{blue}{CHECK with and Refer to AeroVal....}
 
 
-Overall, the year of 2019 was quite moderate with respect to PM air pollution in Europe, which was due to dominating meteorological conditions that year. It was relatively warm across the EMEP area (Figure~\ref{fig:metyear-avMET}), in particular in the cold half-year (Figure~\ref{fig:temp-avMET}). Mild winter conditions would mean less need for residential heating, resulting in lower emissions from this sector. Moreover, stagnant air conditions (with temperature inversion, low wind speed and thin mixing layer), typically causing elevated pollution levels, are less frequent in warm winters. Also, the spring/summer period was relatively warm (except from Russia, Kazakhstan, Finland, most of Sweden, Spain and Portugal). During those months, the higher temperatures would enhance evaporation of semi-volatile inorganic and organic aerosols (SIA and SOA), though the more efficient oxidation contributes to secondary aerosol formation. Furthermore, the year 2019 was relatively dry over most of Europe (except in the south and parts of Scandinavia), in EECCA countries, and most of Russia (except from the northern regions), as shown in Figure~\ref{fig:metyear-avMET}. However, the amount of precipitation was also relatively large in the cold half-year in Denmark, France, the UK and parts of Germany (Figure~\ref{fig:prec-avMET}). As documented in ~\citet{CAMS2020}, the wet end of the year in western and southern Europe was the most prominent feature of precipitation in 2019, with 
+Overall, the year of 2019 was quite moderate with respect to PM air pollution in Europe, which was due to dominating meteorological conditions that year. It was relatively warm across the EMEP area (Figure~\ref{fig:metyear-avMET}), in particular in the cold half-year (Figure~\ref{fig:temp-avMET}). Mild winter conditions would mean less need for residential heating, resulting in lower emissions from this sector. Moreover, stagnant air conditions (with temperature inversion, low wind speed and thin mixing layer), typically causing elevated pollution levels, are less frequent in warm winters. Also, the spring/summer period was relatively warm (except from Russia, Kazakhstan, Finland, most of Sweden, Spain and Portugal). During those months, the higher temperatures would enhance evaporation of semi-volatile inorganic and organic aerosols (SIA and SOA), though the more efficient oxidation contributes to secondary aerosol formation. Furthermore, the year 2019 was relatively dry over most of Europe (except in the south and parts of Scandinavia), in EECCA countries, and most of Russia (except for the northern regions), as shown in Figure~\ref{fig:metyear-avMET}. However, the amount of precipitation was also relatively large in the cold half-year in Denmark, France, the UK and parts of Germany (Figure~\ref{fig:prec-avMET}). As documented in ~\citet{CAMS2020}, the wet end of the year in western and southern Europe was the most prominent feature of precipitation in 2019, with 
 November being particularly extreme, both in terms of the total rainfall amounts and the number of days with heavy rainfall. As wet scavenging is the main PM removal mechanism, this, combined with the mild winter temperatures, resulted in the lower levels of PM pollution in winter 2019 over most of Europe.   
 
-Figure~\ref{fig:PManomin2019} presents the relative anomalies of mean \PM[10] and \PM[2.5] concentrations in 2019 relative to 2000-2018 averages, based on the 2000-2019 trend runs performed with the EMEP MSC-W model using a consistent emission data-set based on officially submitted data, as documented in Chapter \ref{ch:Trends}. In order to look at the sole effect of meteorological conditions on PM pollution, also 2019 run used here is based on the reported emissions and thus different from the 2019 Status run (in which TNO's emissions for residential combustion are used, as documented in Section \ref{Mod_2019}). Figure~\ref{fig:PManomin2019} shows that the PM pollution in 2019 was relatively moderate, with annual mean concentrations being 5-20\% lower than the 2000-2018 averages over most of the EMEP domain, and 20-35\% lower compared to the 18-year average in Central Europe and over vast areas in the N/NE of Russia. Only along NW/N coasts in Fennoscandia, parts of Spain and some south-eastern regions (parts of Turkey, the Caucasus region and Central Asian countries), \PM[10] and \PM[2.5] levels in 2019 were higher relative to the 2000-2018 averages. 
+Figure~\ref{fig:PManomin2019} presents the relative anomalies of mean \PM[10] and \PM[2.5] concentrations in 2019 relative to 2000-2018 averages, based on the 2000-2019 trend runs performed with the EMEP MSC-W model using a consistent emission data-set based on officially submitted data, as documented in Chapter \ref{ch:Trends}. In order to look at the sole effect of meteorological conditions on PM pollution, also the 2019 run used here is based on the reported emissions and thus different from the 2019 Status run (in which TNO's emissions for residential combustion are used, as documented in Section \ref{Mod_2019}). Figure~\ref{fig:PManomin2019} shows that the PM pollution in 2019 was relatively moderate, with annual mean concentrations being 5-20\% lower than the 2000-2018 averages over most of the EMEP domain, and 20-35\% lower compared to the 18-year average in Central Europe and over vast areas in the N/NE of Russia. Only along NW/N coasts in Fennoscandia, parts of Spain and some south-eastern regions (parts of Turkey, the Caucasus region and Central Asian countries), \PM[10] and \PM[2.5] levels in 2019 were higher relative to the 2000-2018 averages. 
 
 %\begin{figure}[H]
 %  \centering{\includegraphics[clip=,angle=90,height=3cm,viewport=175 67 448 754]{FIGS_PM/RelAnomaly_PM10_2019_vs_2000-2018.pdf}}
@@ -269,7 +269,7 @@ areas.
 
 
 Model results and EMEP observational data show that the annual mean \PM[10] concentrations were below the EU limit value of 40 \ug for all of Europe in 2019 (Figure~\ref{fig:PMin2019}). The model calculates annual mean \PM[10] above the WHO recommended AQG of 20 \ug
-in only small regions in the Po Valley and western Turkey. The highest
+for only small regions in the Po Valley and western Turkey. The highest
 observed annual mean \PM[10] concentrations, exceeding the AQG of 20 \ug, were registered at Slovakian sites (24 \ug at SK0004 and 23 \ug SK0007) and Greek GR0001 (23 \ug, 58\% data coverage only). Further, the observations and model results show that annual mean \PM[2.5] concentrations (Figure~\ref{fig:PMin2019}) in 2019 were below the EU limit value of 25 \ug (except in the Po Valley according to the model). However, there were observed cases of exceedance of the WHO AQG value of 10 \ug by annual mean \PM[2.5] at nine sites (including GR0001 with 57\% data coverage), with the highest values at the Hungarian site HU0004 with 16 \ug, followed by German DE0044 with 14 \ug and Italian IT0004 with 13 \ug.
 
 
@@ -294,16 +294,15 @@ modelled values as colour contours and observed values as triangles.
 Out of the 67 sites with daily or hourly \PM[10] measurements with data
 coverage above 75\%, exceedance days were observed at 31 sites. No
 violations of the \PM[10] EU limit value (more than 35 exceedance
-days) were observed. Still, 12 sites had more than 3 exceedance days
-(according to WHO AQG recommendations). The highest numbers of days
+days) were observed. Still, 12 sites had more than 3 exceedance days, as rocommended by the WHO AQG. The highest numbers of days
 with observed exceedances of \PM[10] were 7 at DE0001 and 6 at LV0010 and RS0005.
 
-\PM[2.5] concentrations exceeded the WHO AQG value at 21 out of 51
+\PM[2.5] concentrations exceeded the WHO AQG recommended limit of 25 \ug at 37 out of 51
 stations in 2019. Among those, at 21 sites the number of exceedance
 days were more than 3 (the recommended limit according to WHO AQG). 
 The highest number of exceedance days was 40, observed at HU0002 and IT0004, followed by 30, 26 and 24 exceedance days at DE0044, PL0005 and AT0002, respectively.
 
-The modelled number of exceedance days in 2019 shows in general a good correspondence with the observations, with somewhat better agreement for \PM[10] than for \PM[2.5]. For \PM[10], the model happens to underestimate the occurrence of exceedances of the EU limit value of 50 \ug for some central European sites, for instance for AT0002 and the Dutch sites NL0009 and NL0010 (no modelled exceedance days versus 5 observed), and in the Baltic for LV0010 (0 exceedance day vs. 6 observed). On the other hand, the model tends to overestimate the number of exceedance days at some Mediterranean sites, influenced by Saharan dust, e.g. at the Cypriot site CY0002 (21 vs. 4 observed) and several Spanish sites (in particular ES0007 with 21 vs. 2 observed). Most of the exceedances registered at the central European sites occurred during the winter (mainly caused by residential combustion) and in the spring (often due to agricultural emissions), while little exceedances occurred in the autumn 2019, which was rather wet. By contrast, at the Mediterranean sites the exceedances were more frequent during summer.
+The modelled number of exceedance days in 2019 shows in general a good correspondence with the observations, with somewhat better agreement for \PM[10] than for \PM[2.5]. For \PM[10], the model happens to underestimate the occurrence of exceedances of the EU limit value of 50 \ug for some central European sites, for instance for AT0002 and the Dutch sites NL0009 and NL0010 (no modelled exceedance days versus 5 observed), and in the Baltic for LV0010 (0 exceedance day vs. 6 observed). On the other hand, the model tends to overestimate the number of exceedance days at some Mediterranean sites, influenced by Saharan dust, e.g. at the Cypriot site CY0002 (21 vs. 4 observed) and several Spanish sites (in particular ES0007 with 21 vs. 2 observed). Most of the exceedances registered at the Central European sites occurred during the winter (mainly caused by residential combustion) and in the spring (often due to agricultural emissions), while rather few exceedances occurred in the autumn 2019, which was rather wet. By contrast, at the Mediterranean sites the exceedances were more frequent during summer.
 
 For \PM[2.5], the model reproduces number of exceedance days at IT0004 (40), with most of then (61 \%) coinciding with the observed ones. However, it calculates 12 exceedance days versus 40 observed at HU0002, only 3 versus 30 observed at DE0044, and no exceedance days versus 26 observed at PL0005. At the Dutch sites, the model slightly underestimates observed \PM[2.5] exceedance days at NL0009 and NL0010, but overestimates those at NL0091 and NL0644 (same as for 2018 reported last year). Similar to \PM[10], the model calculates a larger number of exceedance days for \PM[2.5] compared with observations at CY0002 (47 vs 3 observed) and several Spanish sites, which is related to the uncertainties in windblown dust modelling. The seasonality of \PM[2.5] exceedances is similar to that of \PM[10], with most exceedance days at the Mediterranean sites in summer and at the other sites in winter, spring and autumn. The only difference is that the largest number of \PM[2.5] exceedances at three of four German sites occurred in spring, while much fewer occurred during the cold seasons. As discussed above, much rain in November-December combined with the mild winter temperatures resulted in the absence of major PM episodes in 2019 typical for Europe in winters.
 
